Add prerender on build

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Core One Nozzle Wiping Path Generator</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--app-html--></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
