--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#141414" />
+    <meta name="title" content="%APP_TITLE%" />
+    <meta name="description" content="%APP_DESCRIPTION%" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="%APP_TITLE%" />
+    <meta property="og:description" content="%APP_DESCRIPTION%" />
+    <meta property="og:image" content="/opengraph.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="%APP_TITLE%" />
+    <meta name="twitter:description" content="%APP_DESCRIPTION%" />
+    <meta name="twitter:image" content="/twitter.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Core One Nozzle Wiping Path Generator</title>
+    <title>%APP_HTML_TITLE%</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--app-html--></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
