--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%APP_HTML_TITLE%</title>
     <script type="module">
-      import materialSymbolsWoff2 from '@fontsource-variable/material-symbols-rounded/files/material-symbols-rounded-latin-wght-normal.woff2';
+      import materialSymbolsWoff2 from '@fontsource-variable/material-symbols-rounded/files/material-symbols-rounded-latin-wght-normal.woff2?url';
 
       if (!document.head.querySelector('link[data-preload-material-symbols]')) {
         const preload = document.createElement('link');
